include_directories(${TCLAP_INCLUDE_DIR})

enable_testing()

function(TCLAP_ADD_EXAMPLE TEST_NAME)
    add_executable(${TEST_NAME} ${TEST_NAME}.cpp)
    add_test(NAME ${TEST_NAME}_example COMMAND ${TEST_NAME})
    install(TARGETS ${TEST_NAME} DESTINATION examples)
endfunction()

TCLAP_ADD_EXAMPLE(test1)
TCLAP_ADD_EXAMPLE(test2)
TCLAP_ADD_EXAMPLE(test3)
TCLAP_ADD_EXAMPLE(test4)
TCLAP_ADD_EXAMPLE(test5)
TCLAP_ADD_EXAMPLE(test6)
TCLAP_ADD_EXAMPLE(test7)
TCLAP_ADD_EXAMPLE(test8)
TCLAP_ADD_EXAMPLE(test9)
TCLAP_ADD_EXAMPLE(test10)
TCLAP_ADD_EXAMPLE(test11)
TCLAP_ADD_EXAMPLE(test12)
TCLAP_ADD_EXAMPLE(test13)
TCLAP_ADD_EXAMPLE(test14)
TCLAP_ADD_EXAMPLE(test15)
TCLAP_ADD_EXAMPLE(test16)

TCLAP_ADD_EXAMPLE(test18)
TCLAP_ADD_EXAMPLE(test19)
TCLAP_ADD_EXAMPLE(test20)
TCLAP_ADD_EXAMPLE(test21)