include_directories(${TCLAP_INCLUDE_DIR})

function(TCLAP_ADD_EXAMPLE TEST_NAME)
    add_executable(${TEST_NAME} ${TEST_NAME}.cpp)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../tests/${TEST_NAME}.sh ${CMAKE_CURRENT_BINARY_DIR}/../tests/${TEST_NAME}.sh COPYONLY)
    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME}.sh WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../tests)
    set_tests_properties(${TEST_NAME} PROPERTIES ENVIRONMENT srcdir=${CMAKE_CURRENT_SOURCE_DIR}/../tests)
    install(TARGETS ${TEST_NAME} DESTINATION examples)
endfunction()

TCLAP_ADD_EXAMPLE(test1)
TCLAP_ADD_EXAMPLE(test2)
TCLAP_ADD_EXAMPLE(test3)
TCLAP_ADD_EXAMPLE(test4)
TCLAP_ADD_EXAMPLE(test5)
TCLAP_ADD_EXAMPLE(test6)
TCLAP_ADD_EXAMPLE(test7)
TCLAP_ADD_EXAMPLE(test8)
TCLAP_ADD_EXAMPLE(test9)
TCLAP_ADD_EXAMPLE(test10)
TCLAP_ADD_EXAMPLE(test11)
TCLAP_ADD_EXAMPLE(test12)
TCLAP_ADD_EXAMPLE(test13)
TCLAP_ADD_EXAMPLE(test14)
TCLAP_ADD_EXAMPLE(test15)
TCLAP_ADD_EXAMPLE(test16)

TCLAP_ADD_EXAMPLE(test18)
TCLAP_ADD_EXAMPLE(test19)
TCLAP_ADD_EXAMPLE(test20)
TCLAP_ADD_EXAMPLE(test21)