include_directories(${TCLAP_INCLUDE_DIR})

function(TCLAP_ADD_TEST TEST_NAME)
    add_executable(${TEST_NAME} ${TEST_NAME}.cpp)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../tests/${TEST_NAME}.sh ${CMAKE_CURRENT_BINARY_DIR}/../tests/${TEST_NAME}.sh COPYONLY)
    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME}.sh WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../tests)
    set_tests_properties(${TEST_NAME} PROPERTIES ENVIRONMENT srcdir=${CMAKE_CURRENT_SOURCE_DIR}/../tests)
    install(TARGETS ${TEST_NAME} DESTINATION examples)
endfunction()

TCLAP_ADD_TEST(test1)
TCLAP_ADD_TEST(test2)
TCLAP_ADD_TEST(test3)
TCLAP_ADD_TEST(test4)
TCLAP_ADD_TEST(test5)
TCLAP_ADD_TEST(test6)
TCLAP_ADD_TEST(test7)
TCLAP_ADD_TEST(test8)
TCLAP_ADD_TEST(test9)
TCLAP_ADD_TEST(test10)
TCLAP_ADD_TEST(test11)
TCLAP_ADD_TEST(test12)
TCLAP_ADD_TEST(test13)
TCLAP_ADD_TEST(test14)
TCLAP_ADD_TEST(test15)
TCLAP_ADD_TEST(test16)

TCLAP_ADD_TEST(test18)
TCLAP_ADD_TEST(test19)
TCLAP_ADD_TEST(test20)
TCLAP_ADD_TEST(test21)

# test17 has two source files

add_executable(test17 test17.cpp test17-a.cpp)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../tests/test17.sh ${CMAKE_CURRENT_BINARY_DIR}/../tests/test17.sh COPYONLY)
add_test(NAME test17 COMMAND test17.sh WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/../tests)
set_tests_properties(test17 PROPERTIES ENVIRONMENT srcdir=${CMAKE_CURRENT_SOURCE_DIR}/../tests)
install(TARGETS test17 DESTINATION examples)